[package]
name = "backend"
version = "0.1.0"
authors = ["Ruben Paz <me@ruben.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.20.0"
clap = "2.33.0"
chrono = "0.4.7"
actix-web = "1.0.5"
actix-files = "0.1.4"
dotenv = "0.14.1"
